Final touches, desktop environment is still faulty, but you can run apt-get